forgot to update the html to reflect the new paths

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<script type='text/javascript' src='../js/jquery-1.10.2.min.js'></script>
-<script type='text/javascript' src='../js/davis-0.1.0.js'></script>
+<script type='text/javascript' src='js/jquery-1.10.2.min.js'></script>
+<script type='text/javascript' src='js/davis-0.1.0.js'></script>
 <script type='text/javascript' src='js/appv0.0.2.js'></script>
 </head>
 
